safe-discriminant/tests/fail/missing_all_disc.stderr
error: Missing explicit discriminant. Note: If you want to reason about discriminants, but do not care about concrete values, consider using `core::mem::Discriminant` instead.
 --> tests/fail/missing_all_disc.rs:6:5
  |
6 |     A,
  |     ^

error: Missing explicit discriminant. Note: If you want to reason about discriminants, but do not care about concrete values, consider using `core::mem::Discriminant` instead.
 --> tests/fail/missing_all_disc.rs:7:5
  |
7 |     B(u8),
  |     ^

error: Missing explicit discriminant. Note: If you want to reason about discriminants, but do not care about concrete values, consider using `core::mem::Discriminant` instead.
 --> tests/fail/missing_all_disc.rs:8:5
  |
8 |     C { inner: u8 },
  |     ^
